<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/header_home_screen"
        android:layout_marginTop="40dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="75sp"
        android:fontFamily="casual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title" />

    <Button
        android:text="@string/button_take_quiz"
        android:textSize="20sp"
        android:background="@drawable/background1"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="60dp"
        android:id="@+id/button_take_quiz" />

    <Button
        android:text="@string/button_manage_decks"
        android:textSize="20sp"
        android:background="@drawable/background2"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="60dp"
        android:id="@+id/button_manage_decks" />

    <Button
        android:text="@string/button_manage_cards"
        android:textSize="20sp"
        android:background="@drawable/background2"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="60dp"
        android:id="@+id/button_manage_cards" />

</LinearLayout>