<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:text="Manage Decks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="HardcodedText" />

    <Button
        android:text="@string/button_create_edit_delete_deck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_ced_decks" />

    <Button
        android:text="@string/button_receive_deck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_receive_deck" />

    <Button
        android:text="@string/button_share_deck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_share_deck" />


</LinearLayout>